css/custom.css
#loading-overlay {
    position: fixed;
    width: 100%;
    height: 100%;
    display: flex;
    align-items: center;
    top: 0;
    z-index: 9998;
    display: none;
    background-color: rgba(255, 255, 255, 0.5);
}

.loading-icon {
    display: flex;
    margin: 0 auto;
    position: relative;
    top: 50%;
    text-align: center;
}

.loading-icon div {
    margin: 0 auto !important;
}

.position-fixed {
    position: fixed;
}

.container-fluid {
    padding-left: 0;
    padding-right: 0;
    padding-top: 50px;
}

.toolbar-wrapper {
    top: 0;
    position: fixed;
    width: 100%;
    z-index: 99;
    background-color: white;
}

.toolbar {
    margin: 5px 15px;
    background-color: #fff;
    border: 1px solid #ddd;
    border-radius: 4px;
    -webkit-box-shadow: none;
    box-shadow: none;
    padding: 5px 15px;
}

.toolbar p {
    margin-bottom: 0;
}

.toolbar .form-group {
    margin-bottom: 0;
}

.toolbar .form-control {
    height: 22px;
}

.toolbar .btn-xs {
    width: 27px;
}

.toolbar a:hover,
.toolbar a:active {
    background-position: 0% 33%;
}

.toolbar .gdt {
    background-image: url('../images/icons/toolbar/j429.png');
}

.toolbar .new-treatment {
    background-image: url('../images/icons/toolbar/newTreatment.png');
}

.toolbar .new-treatment-dialog {
    background-image: url('../images/icons/toolbar/j434.png');
}

.toolbar .biometric-report {
    background-image: url('../images/icons/toolbar/bio_print.png');
}

.toolbar .treatment-report {
    background-image: url('../images/icons/toolbar/j436.png');
}

.toolbar .laboratory-report {
    background-image: url('../images/icons/toolbar/lab_print.png');
}

.toolbar .search {
    background-image: url('../images/icons/toolbar/j424.png');
}

.toolbar .sort {
    background-image: url('../images/icons/toolbar/sortDirection.png');
}

.toolbar .appointment {
    background-image: url('../images/icons/toolbar/j402.png');
}

.toolbar .recall {
    background-image: url('../images/icons/toolbar/j428.png');
}

.toolbar .todo {
    background-image: url('../images/icons/toolbar/j430.png');
}

.toolbar .refresh {
    background-image: url('../images/icons/toolbar/reload.png');
}

.toolbar .icon-dropdown {
    margin-bottom: -5px;
}

.dropdown-menu li.divider:first-child,
.dropdown-menu li.divider:last-child {
    display: none;
}

.dropdown-menu li.divider + .divider {
    display: none;
}

/*.form-control {
    border-width: 0;
    box-shadow: none;
    border-radius: 0;
}*/

.treatment {
    outline: 0;
    /*padding-left: 0;*/
    /*padding-right: 0;*/
}

.treatment:before {
    display: block;
    content: ' ';
    width: 100%;
    height: 5px;
    margin-bottom: 2px;
}

.treatment.secondary:before {
    margin-left: 27%;
    width: 73%;
}

.treatment .panel {
    border: 0;
    border-radius: 0;
    margin-bottom: 5px;
}

.large-margins .treatment .panel {
    margin-bottom: 15px;
}

.treatment .panel-heading {
    background-image: none;
    background-color: #fff;
    padding-top: 1px;
    padding-bottom: 0;
    font-weight: bold;
}

.treatment .panel-heading > .row {
    margin-top: 0px;
    margin-bottom: 3px;
}

.large-margins .treatment .panel-heading > .row {
    margin-top: 10px;
    margin-bottom: 10px;
}

.treatment.closed .panel-heading {
    background-color: #f0f0f0;
}

.treatment .panel-heading .btn {
    font-weight: bold;
    text-shadow: none;
    text-align: left;
}

.treatment .panel-body {
    padding: 10px 15px 3px 15px;
}

.large-margins .treatment .panel-body {
    padding: 15px;
}

.treatment .btn-default {
    background: 0;
    box-shadow: none;
    display: block;
    border-color: #f3f3f3;
}

.treatment .heading-label {
    display: inline-block;
    padding: 6px 12px;
    margin-bottom: 0;
    text-align: left;
    white-space: nowrap;
    vertical-align: middle;
    background-image: none;
}

.treatment .btn-icon {
    display: inline-block;
}

.treatment .treatment-user {
    margin-left: 10px;
}

.treatment .list-group-item {
    border: 0;
    padding: 3px 15px;
}

.large-margins .treatment .list-group-item {
    padding: 5px 15px;
}

.treatment .form-group {
    margin-bottom: 7px;
}

.treatment .list-group {
    box-shadow: none;
    margin-bottom: 0;
}

.treatment .list-group {
    /*margin-bottom: 15px;*/
    margin-bottom: 5px;
}

.treatment .form-control {
    border-color: #f3f3f3;
    box-shadow: inset 0 1px 1px rgba(0, 0, 0, .025);
}

.select2-container .select2-choices .select2-search-field input,
.select2-container .select2-choice,
.select2-container .select2-choices {
    border-color: #f9f9f9;
}

.icon-dropdown {
    display: inline-block;
}

.margin-bottom-10 {
    margin-bottom: 10px;
}

.treatment .achilles-icon {
    width: 34px;
    display: inline-block;
    vertical-align: middle;
    background-repeat: no-repeat;
    background-position: center center;
    background-size: 20px 20px;
}

.treatment .achilles-icon:active {
    box-shadow: none;
}

.achilles-medication,
.achilles-medication:active {
    background-image: url('../images/icons/medi.png');
}

.achilles-medication.empty,
.achilles-medication.empty:active {
    background-image: url('../images/icons/medi_g.png');
}

.achilles-laboratory,
.achilles-laboratory:active {
    background-image: url('../images/icons/labor.png');
}

.achilles-laboratory.empty,
.achilles-laboratory.empty:active {
    background-image: url('../images/icons/labor_g.png');
}

.achilles-document,
.achilles-document:active {
    background-image: url('../images/icons/dokumente.png');
}

.achilles-document.empty,
.achilles-document.empty:active {
    background-image: url('../images/icons/dokumente_g.png');
}

.achilles-auf,
.achilles-auf:active {
    background-image: url('../images/icons/auf.png');
}

.achilles-auf.empty,
.achilles-auf.empty:active {
    background-image: url('../images/icons/auf_g.png');
}

.achilles-biometric,
.achilles-biometric:active {
    background-image: url('../images/icons/biodaten.png');
}

.achilles-biometric.empty,
.achilles-biometric.empty:active {
    background-image: url('../images/icons/biodaten_g.png');
}

.achilles-benefit,
.achilles-benefit:active {
    background-image: url('../images/icons/leistung.png');
}

.achilles-benefit.empty,
.achilles-benefit.empty:active {
    background-image: url('../images/icons/leistung_g.png');
}

.large-fonts,
.large-fonts .panel-heading .btn,
.large-fonts .form-control {
    font-size: 18px;
}

.large-fonts .panel-heading .btn {
    height: 36px;
}

.small-fonts,
.small-fonts .panel-heading .btn,
.small-fonts .form-control {
    font-size: 12px;
}

.small-fonts .panel-heading .btn {
    height: 30px;
}

span.checkmark {
    display: inline-block;
    width: 15px;
}

/*
 * textAngular custom CSS
 */

/*.ta-toolbar {*/
    /*display: none;*/
/*}*/

/*.ta-toolbar.focussed {*/
    /*display: block;*/
/*}*/

.ta-toolbar.btn-toolbar {
    margin-left: 0;
}

.entry-toolbar .btn-group,
.ta-toolbar .btn-group {
    float: right;
}

.ta-editor.ta-html, .ta-scroll-window.form-control {
    min-height: 34px;
}

.ta-editor p {
    margin-bottom: 0;
}

.ta-scroll-window > .ta-bind {
    min-height: 34px;
}

.locked .ta-root.focussed > .ta-scroll-window.form-control {
    border: 1px solid orangered;
    webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(255, 69, 0, 0.6);
    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(255, 69, 0, 0.6);
}

.locked-warning {
    position: absolute;
    z-index: 99;
    right: 5%;
    bottom: 15px;
}

/* for the textAngular toolbar buttons */
.red-text {
    color: red;
}

.green-text {
    color: green;
}

.blue-text {
    color: blue;
}

.orange-text {
    color: orange;
}

.grey-text {
    color: lightgrey;
}

.treatment-entry {
    position: relative;
}

.entry-toolbar,
.editor-toolbar {
    position: absolute;
    z-index: 90;
    right: 15px;
}

.entry-toolbar .btn-group,
.editor-toolbar .btn-group {
    background-color: white;
}

.entry-toolbar {
    top: -32px;
    width: 50px;
}

.editor-toolbar {
    bottom: -25px;
    width: 530px;
}

.title-settings-widget {
    width: 300px;
    position: fixed;
    top: 50px;
    right: 15px;
    z-index: 95;
    height: 80%;
    box-sizing: border-box;
    padding: 15px 0;
}

.title-settings-widget .panel{
    /*overflow-y: auto;*/
    height: 100%;
    box-sizing: border-box;
    padding-top: 136px;
}

.title-settings-widget .panel-heading {
    position: absolute;
    top: 17px;
    width: 99%;
    border-top-left-radius: 5px;
    border-top-right-radius: 5px;
    z-index: 9;
}

.title-settings-widget .panel-body {
    position: absolute;
    z-index: 9;
    background-color: white;
    width: 99%;
    top: 58px;
    border-bottom: 1px solid #ddd;
}

.title-settings-widget .list-group {
    /*margin-top: 100px;*/
    max-height: 100%;
    overflow-y: auto;
}

.confirm-widget,
.close-widget {
    position: absolute;
    z-index: 10;
    /*width: 38px;*/
}

.confirm-widget {
    right: 2px;
    bottom: 2px;
}

.close-widget {
    top: 2px;
    right: 2px;
}

.ui-draggable-handle {
    cursor: move;
}

.fixtext-widget {
    /*width: 600px;*/
    position: fixed;
    top: 50px;
    left: 15px;
    z-index: 95;
    height: auto;
    box-sizing: border-box;
    padding: 15px 0;
}

.fixtext-widget .panel-heading,
.fixtext-widget .panel-body {
    position: relative;
}

